@@ -12,24 +12,21 @@
 
 namespace ba {
 
-LAMMPSDumpParser::LAMMPSDumpParser(std::string data_file, std::string atom_style, bool rescaled_coords) :
-				BaseParser(),
-				_rescaled_coords(rescaled_coords) {
+LAMMPSDumpParser::LAMMPSDumpParser(std::string data_file, std::string atom_style) :
+				BaseParser() {
 	LAMMPSDataFileParser parser = LAMMPSDataFileParser(atom_style);
 	_data_file_system = parser.make_system(data_file);
 	set_topology(Topology::make_topology_from_system(_data_file_system));
 }
 
-LAMMPSDumpParser::LAMMPSDumpParser(std::shared_ptr<System> data_file_system, bool rescaled_coords) :
+LAMMPSDumpParser::LAMMPSDumpParser(std::shared_ptr<System> data_file_system) :
 				BaseParser(),
-				_rescaled_coords(rescaled_coords),
 				_data_file_system(data_file_system) {
 	set_topology(std::make_shared<Topology>(data_file_system));
 }
 
-LAMMPSDumpParser::LAMMPSDumpParser(bool rescaled_coords) :
-				BaseParser(),
-				_rescaled_coords(rescaled_coords) {
+LAMMPSDumpParser::LAMMPSDumpParser() :
+				BaseParser() {
 
 }
 
@@ -40,16 +37,14 @@ LAMMPSDumpParser::~LAMMPSDumpParser() {
 std::shared_ptr<System> LAMMPSDumpParser::_parse_stream(std::ifstream &configuration) {
 	std::shared_ptr<System> syst(std::make_shared<System>());
 
-	auto header_data = _parse_headers(configuration, syst);
+	int N = _parse_headers(configuration, syst);
 
-	if(header_data.empty) {
+	if(N == -1) {
+		BA_WARNING("Can't parse the headers of the dump data file");
 		return nullptr;
 	}
 
-	syst->time = header_data.time_step;
-	syst->box = header_data.box;
-
-	for(uint i = 0; i < header_data.N; i++) {
+	for(int i = 0; i < N; i++) {
 		std::string line;
 		std::getline(configuration, line);
 		if(!configuration.good()) {
@@ -65,60 +60,83 @@ std::shared_ptr<System> LAMMPSDumpParser::_parse_stream(std::ifstream &configura
 			throw std::runtime_error(error);
 		}
 
-		int p_idx = utils::lexical_cast<int>(split[0]);
-		std::shared_ptr<Particle> new_particle(std::make_shared<Particle>(p_idx));
-		new_particle->set_type(split[1]);
-
 		try {
-			vec3 pos(utils::lexical_cast<double>(split[2]),
-					utils::lexical_cast<double>(split[3]),
-					utils::lexical_cast<double>(split[4]));
-			if(_rescaled_coords) {
-				pos *= header_data.box;
+			int p_idx = (_atom_fields.idx == Fields::UNSET) ? syst->available_index() : utils::lexical_cast<int>(split[_atom_fields.idx]);
+			std::shared_ptr<Particle> new_particle(std::make_shared<Particle>(p_idx));
+
+			if(_atom_fields.type != Fields::UNSET) {
+				new_particle->set_type(split[_atom_fields.type]);
+			}
+
+			if(_atom_fields.mass != Fields::UNSET) {
+				new_particle->set_mass(utils::lexical_cast<double>(split[_atom_fields.mass]));
+			}
+
+			if(_atom_fields.charge != Fields::UNSET) {
+				new_particle->set_charge(utils::lexical_cast<double>(split[_atom_fields.charge]));
+			}
+
+			vec3 pos, vel;
+			for(int i = 0; i < 3; i++) {
+				// i-th coordinate
+				if(_atom_fields.coords[i].idx != Fields::UNSET) {
+					pos[i] = utils::lexical_cast<double>(split[_atom_fields.coords[i].idx]);
+					if(_atom_fields.coords[i].scaled) {
+						pos[i] *= syst->box[i];
+					}
+				}
+				// i-th velocity
+				if(_atom_fields.vel[i] != Fields::UNSET) {
+					vel[i] = utils::lexical_cast<double>(split[_atom_fields.vel[i]]);
+				}
 			}
 			new_particle->set_position(pos);
+			new_particle->set_velocity(vel);
+
+			syst->add_particle(new_particle);
 		}
 		catch(utils::bad_lexical_cast &e) {
-			std::string error = fmt::format("The position of the {}-th particle ({}, {}, {}) cannot be cast to a vector of floating-point numbers", i, split[2], split[3], split[4]);
+			std::string error = fmt::format("The line relative to the {}-th particle cannot be parsed because one or more fields cannot be cast to numeric data types", i);
 			throw std::runtime_error(error);
 		}
 
-		syst->add_particle(new_particle);
 	}
 
-	// copy masses and charges from the system's data file
+	// copy masses and charges from the system's data file if the dump file does not contain info about them
 	if(_data_file_system != nullptr) {
 		for(auto p : syst->particles()) {
 			auto other_p = _data_file_system->particle_by_id(p->index());
-			p->set_mass(other_p->mass());
-			p->set_charge(other_p->charge());
+			if(_atom_fields.mass == Fields::UNSET) {
+				p->set_mass(other_p->mass());
+			}
+			if(_atom_fields.charge == Fields::UNSET) {
+				p->set_charge(other_p->charge());
+			}
 		}
 	}
 
 	return syst;
 }
 
-LAMMPSDumpParser::HeaderData LAMMPSDumpParser::_parse_headers(std::ifstream &configuration, std::shared_ptr<System> syst) {
-	LAMMPSDumpParser::HeaderData hd;
+int LAMMPSDumpParser::_parse_headers(std::ifstream &configuration, std::shared_ptr<System> syst) {
+	int N = -1;
 
 	bool done = false;
 	while(!done) {
 		std::string line;
 		std::getline(configuration, line);
 		if(!configuration.good()) {
-			hd.empty = true;
-			// early return
-			return hd;
+			return -1;
 		}
 		if(utils::starts_with(line, "ITEM:")) {
 			if(utils::contains(line, "TIMESTEP")) {
 				std::getline(configuration, line);
-				hd.time_step = utils::lexical_cast<ullint>(utils::trim_copy(line));
+				syst->time = utils::lexical_cast<ullint>(utils::trim_copy(line));
 			}
 			else if(utils::contains(line, "NUMBER OF ATOMS")) {
 				std::getline(configuration, line);
 				try {
-					hd.N = utils::lexical_cast<uint>(utils::trim_copy(line));
+					N = utils::lexical_cast<uint>(utils::trim_copy(line));
 				}
 				catch(utils::bad_lexical_cast &e) {
 					std::string error = fmt::format("The number of particles '{}' found in the LAMMPS dump configuration cannot be cast to an integer", line);
@@ -134,7 +152,7 @@ LAMMPSDumpParser::HeaderData LAMMPSDumpParser::_parse_headers(std::ifstream &con
 					try {
 						double lower = utils::lexical_cast<double>(split[0]);
 						double upper = utils::lexical_cast<double>(split[1]);
-						hd.box[i] = upper - lower;
+						syst->box[i] = upper - lower;
 					}
 					catch(utils::bad_lexical_cast &e) {
 						std::string error = fmt::format("The box line '{}' found in the LAMMPS dump configuration is not valid", line);
@@ -143,22 +161,119 @@ LAMMPSDumpParser::HeaderData LAMMPSDumpParser::_parse_headers(std::ifstream &con
 				}
 			}
 			else if(utils::contains(line, "ITEM: ATOMS")) {
+				auto spl = utils::split(line);
+				std::vector<std::string> unused_fields;
+				for(uint i = 2; i < spl.size(); i++) {
+					int idx = i - 2;
+					std::string attribute = spl[i];
+					if(attribute.size() > 0) {
+						if(attribute == "id") {
+							_atom_fields.idx = idx;
+						}
+						else if(attribute == "type") {
+							_atom_fields.type = idx;
+						}
+						else if(attribute == "mass") {
+							_atom_fields.mass = idx;
+						}
+						else if(attribute == "q") {
+							_atom_fields.charge = idx;
+						}
+						else if(attribute == "vx") {
+							_atom_fields.vel[0] = idx;
+						}
+						else if(attribute == "vy") {
+							_atom_fields.vel[1] = idx;
+						}
+						else if(attribute == "vz") {
+							_atom_fields.vel[2] = idx;
+						}
+						// unscaled, wrapped coordinates
+						else if(attribute == "x") {
+							_atom_fields.coords[0].idx = idx;
+						}
+						else if(attribute == "y") {
+							_atom_fields.coords[1].idx = idx;
+						}
+						else if(attribute == "z") {
+							_atom_fields.coords[2].idx = idx;
+						}
+						// scaled, wrapped coordinates
+						else if(attribute == "xs") {
+							_atom_fields.coords[0].idx = idx;
+							_atom_fields.coords[0].scaled = true;
+						}
+						else if(attribute == "ys") {
+							_atom_fields.coords[1].idx = idx;
+							_atom_fields.coords[1].scaled = true;
+						}
+						else if(attribute == "zs") {
+							_atom_fields.coords[2].idx = idx;
+							_atom_fields.coords[2].scaled = true;
+						}
+						// unscaled, unwrapped coordinates
+						else if(attribute == "xu") {
+							_atom_fields.coords[0].idx = idx;
+							_atom_fields.coords[0].wrapped = false;
+						}
+						else if(attribute == "yu") {
+							_atom_fields.coords[1].idx = idx;
+							_atom_fields.coords[1].wrapped = false;
+						}
+						else if(attribute == "zu") {
+							_atom_fields.coords[2].idx = idx;
+							_atom_fields.coords[2].wrapped = false;
+						}
+						// scaled, unwrapped coordinates
+						else if(attribute == "xsu") {
+							_atom_fields.coords[0].idx = idx;
+							_atom_fields.coords[0].scaled = true;
+							_atom_fields.coords[0].wrapped = false;
+						}
+						else if(attribute == "ysu") {
+							_atom_fields.coords[1].idx = idx;
+							_atom_fields.coords[1].scaled = true;
+							_atom_fields.coords[1].wrapped = false;
+						}
+						else if(attribute == "zsu") {
+							_atom_fields.coords[2].idx = idx;
+							_atom_fields.coords[2].scaled = true;
+							_atom_fields.coords[2].wrapped = false;
+						}
+						else {
+							unused_fields.push_back(attribute);
+						}
+					}
+				}
+
+				std::string warning = "The -->";
+				for(auto &f: unused_fields) {
+					warning += " " + f;
+				}
+				warning += " <-- field(s) found in the dump file relative to time = {} will not be used";
+				BA_WARNING(warning, syst->time);
+
 				done = true;
 			}
 		}
 	}
 
-	return hd;
+	return N;
 }
 
 #ifdef PYTHON_BINDINGS
 
 void export_LAMMPSDumpParser(py::module &m) {
-	py::class_<LAMMPSDumpParser, BaseParser, std::shared_ptr<LAMMPSDumpParser>> parser(m, "LAMMPSDumpParser");
+	py::class_<LAMMPSDumpParser, BaseParser, std::shared_ptr<LAMMPSDumpParser>> parser(m, "LAMMPSDumpParser", R"pbdoc(
+Parse LAMMPS dump files.
 
-	parser.def(py::init<bool>(), py::arg("rescaled_coords") = false);
-	parser.def(py::init<std::shared_ptr<System>, bool>(), py::arg("data_file_system"), py::arg("rescaled_coords") = false);
-	parser.def(py::init<std::string, std::string, bool>(), py::arg("data_file"), py::arg("atom_style"), py::arg("rescaled_coords") = false);
+It uses the "ITEM: ATOMS" line to automatically map fields to atom/particle properties (type, index, mass, charge, coordinates, velocities).
+It can optionally use a LAMMPS data file to also initialise the system topology.
+)pbdoc");
+
+	parser.def(py::init<>(), "The default constructor takes no arguments");
+	parser.def(py::init<std::shared_ptr<System>>(), py::arg("data_file_system"));
+	parser.def(py::init<std::string, std::string>(), py::arg("data_file"), py::arg("atom_style"));
 }
 
 #endif
